<resources>
    <string name="app_name">NiyoinSFA</string>
    <string name="please_wait">Please wait...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lbl_add_program">ADD ProGRAM</string>
    <string name="msg_miss_call_repor">Miss Call Report</string>
    <string name="lbl_individual">Individual</string>
    <string name="lbl_e_detailing">e-Detailing</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_byregowda_t_s">Byregowda T S</string>
    <string name="lbl_tour_program">Tour Program</string>
    <string name="lbl_specialization">Specialization</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_pob_details">POB Details</string>
    <string name="msg_dr_rashmi_manju">Dr.Rashmi Manjunath</string>
    <string name="lbl_stockist2">STOCKIST</string>
    <string name="lbl_demo">Demo</string>
    <string name="lbl_amee_daxini">Amee Daxini</string>
    <string name="lbl_chemist_dcr">Chemist DCR</string>
    <string name="lbl_approval">Approval</string>
    <string name="lbl_anil_kumar_bs">Anil Kumar BS</string>
    <string name="lbl_dr_uday_kumar">DR UDAY KUMAR</string>
    <string name="lbl_08_08_2023">08/08/2023</string>
    <string name="lbl_select_tp_date">Select TP Date</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_reminder">Reminder</string>
    <string name="lbl_ashwini_sreekar">ASHWINI SREEKAR</string>
    <string name="msg_specialization">Specialization Wise</string>
    <string name="lbl_expense">Expense</string>
    <string name="msg_professional_in">Professional Information</string>
    <string name="lbl_report">Report</string>
    <string name="lbl_select_activity">Select Activity</string>
    <string name="lbl_a">A</string>
    <string name="lbl_select">Select</string>
    <string name="lbl_anupama">Anupama</string>
    <string name="lbl_email_id">Email Id</string>
    <string name="lbl_additional">Additional</string>
    <string name="lbl_add_dcr">ADD DCR</string>
    <string name="lbl_grade">Grade</string>
    <string name="lbl_support">Support</string>
    <string name="msg_meeting_informa">Meeting Information</string>
    <string name="lbl_swaroop">SWAROOP</string>
    <string name="msg_gift_sample_det">Gift Sample</string>
    <string name="lbl_doctor">Doctor</string>
    <string name="lbl_select_doa">Select DOA</string>
    <string name="msg_select_from_tim">Select From Time</string>
    <string name="lbl_working">Working</string>
    <string name="lbl_select_dob">Select DOB</string>
    <string name="lbl_tp">TP</string>
    <string name="lbl_extra_activity">Extra Activity</string>
    <string name="lbl_tp_report">TP Report</string>
    <string name="msg_update_stockist">Update Stockist Location</string>
    <string name="lbl_core_utility">CORE UTILITY</string>
    <string name="lbl_distance">Distance</string>
    <string name="lbl_visit_area">Visit Area</string>
    <string name="lbl_hh_mm">hh:mm</string>
    <string name="lbl_view">VIEW</string>
    <string name="lbl_longitude">Longitude</string>
    <string name="lbl_lumpsum">Lumpsum</string>
    <string name="lbl_07_08_2023">07/08/2023</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_select_to_time">Select To Time</string>
    <string name="lbl_pending">Pending</string>
    <string name="lbl_map_report">Map Report</string>
    <string name="lbl_select_doctor">Select Doctor</string>
    <string name="lbl_chemist">Chemist</string>
    <string name="lbl_chemist_name">Chemist Name</string>
    <string name="lbl_add_exp">ADD EXP</string>
    <string name="lbl_active">Active</string>
    <string name="lbl_expense_dcr">Expense DCR</string>
    <string name="lbl_doctor2">DOCTOR</string>
    <string name="lbl_to_area">To Area</string>
    <string name="msg_select_expense">Select Expense Date</string>
    <string name="lbl_web_link">Web Link</string>
    <string name="lbl_unmarried">Unmarried</string>
    <string name="lbl_add_chemist">Add Chemist</string>
    <string name="lbl_divya_gorur">DIVYA Gorur</string>
    <string name="lbl_from_area">From Area</string>
    <string name="lbl_reports">Reports</string>
    <string name="lbl_chetana_p_r">CHETANA P R</string>
    <string name="lbl_degree">Degree</string>
    <string name="lbl_stockist">Stockist</string>
    <string name="lbl_bengaluru_1">BENGALURU 1</string>
    <string name="lbl_bengaluru_2">BENGALURU 2</string>
    <string name="lbl_bengaluru_3">BENGALURU 3</string>
    <string name="msg_report_categori">Report Categories</string>
    <string name="lbl_dr_aishawary">Dr.AISHAWARY</string>
    <string name="lbl_view_program">VIEW PROGRAM</string>
    <string name="lbl_inactive">Inactive</string>
    <string name="lbl_joint_work">Joint Work</string>
    <string name="lbl_stocking_dcr">Stocking DCR</string>
    <string name="lbl_state_11">State 11</string>
    <string name="lbl_add_stockist">Add Stockist</string>
    <string name="lbl_view_dcr">VIEW DCR</string>
    <string name="msg_pending_for_app">Pending For Approval</string>
    <string name="msg_head_quarter">Head Quarter : BENGALURU</string>
    <string name="lbl_bangalore">BANGALORE</string>
    <string name="lbl_days">Days</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_kolar">KOLAR</string>
    <string name="lbl_g_mahesh">G MAHESH</string>
    <string name="lbl_106">106</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_joint">Joint</string>
    <string name="lbl_chemist2">CHEMIST</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_leave">LEAVE</string>
    <string name="lbl_meeting">Meeting</string>
    <string name="lbl_pob_report">POB Report</string>
    <string name="lbl_divert">Divert</string>
    <string name="lbl_area">Area</string>
    <string name="lbl_user_type">User Type</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_11_08_2023">11/08/2023</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_expense_type">Expense Type</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_camp">Camp</string>
    <string name="lbl_working_with">Working With</string>
    <string name="lbl_yyyy_mm_dd">yyyy/mm/dd</string>
    <string name="msg_details_area_n">Details/ Area Name</string>
    <string name="lbl_amt">Amt</string>
    <string name="msg_target_vs_achie">Target vs Achievement</string>
    <string name="msg_approved_tour_p">Approved Tour Programs</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_view_exp">VIEW EXP</string>
    <string name="lbl_core_utility2">Core utility</string>
    <string name="lbl_2">2</string>
    <string name="msg_company_name">Company Name : AKSH PHARMA</string>
    <string name="lbl_add_doctor">Add Doctor</string>
    <string name="msg_general_informa">General Information</string>
    <string name="lbl_m_dhyaneshwar">M DHYANESHWAR</string>
    <string name="lbl_remark">Remark</string>
    <string name="msg_product_scheme">Product Scheme Details</string>
    <string name="lbl_10_08_2023">10/08/2023</string>
    <string name="lbl_local">Local</string>
    <string name="lbl_productwise">ProductWise</string>
    <string name="lbl_out_station">Out Station</string>
    <string name="lbl_other_activity">Other Activity</string>
    <string name="msg_name_anil_kum">Name : Anil kumar B S</string>
    <string name="lbl_da_type">DA Type</string>
    <string name="lbl_latitude">Latitude</string>
    <string name="lbl_leave_holiday">Leave/Holiday</string>
    <string name="lbl_ex_city">Ex- City</string>
    <string name="lbl_dcr_reports">DCR Reports</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_deactive">Deactive</string>
    <string name="lbl_focus_products">Focus Products</string>
    <string name="lbl_online_help">Online Help</string>
    <string name="lbl_apply_leave">Apply Leave</string>
    <string name="lbl_09_08_2023">09/08/2023</string>
    <string name="msg_update_doctor_l">Update Doctor Location</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_doctor_dcr">Doctor DCR</string>
    <string name="lbl_add_area">Add Area</string>
    <string name="lbl_none">None</string>
    <string name="msg_update_chemist">Update Chemist Location</string>
    <string name="lbl_married">Married</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_utility">Utility</string>
    <string name="lbl_view_doctor">View Doctor</string>
    <string name="lbl_view_chemist">View Chemist</string>
    <string name="lbl_view_stockist">View Stockist</string>
    <string name="phone">Phone</string>
    <string name="lbl_city">City</string>
    <string name="update_doctor_location">Update Doctor Location</string>
    <string name="update_chemist_location">Update Chemist Location</string>
    <string name="lbl_doctor_search">Search Doctor</string>
    <string name="lbl_chemist_search">Search Chemist</string>
    <string name="update_stockist_location">Update Stockist Location</string>
    <string name="lbl_stockist_search">Search Stockist</string>
    <string name="lbl_leave_type">Leave Type</string>
    <string name="lbl_from">From</string>
    <string name="lbl_to">To</string>
    <string name="lbl_old_password">Old Password</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="leave_application">Leave Application</string>
    <string name="lbl_all_images">All Images</string>
    <string name="lbl_focus_product">Focus Product</string>
    <string name="lbl_gift">Gift</string>
    <string name="lbl_gift_sample_report">Gift/Sample Report</string>
    <string name="lbl_sample">Sample</string>
    <string name="lbl_select_lumpsum">Select Lumpsum</string>
    <string name="lbl_dd_mm_yyyy">dd/mm/yyyy</string>

    <string-array name="leave_types">
        <item>Select</item>
        <item>Sick leave</item>
        <item>Casual leave</item>
        <item>Privilege leave</item>
        <item>Leave without pay</item>
    </string-array>

    <string-array name="grades">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
</resources>