<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ApprovalActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_16pxh"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <LinearLayout android:id="@+id/linearRowgroup140"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonPrimary"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_25pxh"
                android:paddingStart="@dimen/_26pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@string/lbl_tp"
                android:textAllCaps="true"
                style="@style/txtSolidRounded" tools:text="@string/lbl_tp"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonSecondar"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingStart="@dimen/_19pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@string/lbl_leave"
                android:textAllCaps="true"
                style="@style/txtRoundedOutline" tools:text="@string/lbl_leave"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup140"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingStart="@dimen/_14pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@string/lbl_doctor2"
                android:textAllCaps="true"
                style="@style/txtRoundedOutline" tools:text="@string/lbl_doctor2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@string/lbl_chemist2"
                android:textAllCaps="true"
                style="@style/txtRoundedOutline" tools:text="@string/lbl_chemist2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonSecondarOne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingStart="@dimen/_11pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@string/lbl_stockist2"
                android:textAllCaps="true"
                style="@style/txtRoundedOutline" tools:text="@string/lbl_stockist2"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearRowinbox"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_18pxv"

            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtInbox"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/msg_pending_for_app"
                style="@style/txtDMSansbold9_2" tools:text="@string/msg_pending_for_app"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtInboxOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_55pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_2"
                style="@style/txtDMSansbold9_3" tools:text="@string/lbl_2"/>
        </LinearLayout>
        <View android:background="@color/gray_301"
            android:id="@+id/lineLineFour"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_200pxh"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowinboxTwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtInboxTwo"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.42"
                android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_name"
                style="@style/txtDMSansbold9_2" tools:text="@string/lbl_name"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtInboxThree"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_257pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.58"
                android:gravity="end"
                android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_pending"
                style="@style/txtDMSansbold9_2" tools:text="@string/lbl_pending"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowinboxFour"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtInboxFour"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.9"
                android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_g_mahesh"
                style="@style/txtDMSansbold9_2" tools:text="@string/lbl_g_mahesh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtInboxFive"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_235pxh"
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_2"
                style="@style/txtDMSansbold9_2" tools:text="@string/lbl_2"/>
        </LinearLayout>
        <ImageView android:gravity="start"
            android:id="@+id/imagePreferences"
            android:layout_height="@dimen/_308pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" tools:src="@drawable/img_preferences"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInboxSix"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@string/msg_approved_tour_p"
            style="@style/txtDMSansbold14_2" tools:text="@string/msg_approved_tour_p"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroup141"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:padding="@dimen/_20pxh"
            android:singleLine="true"
            android:text="@string/lbl_106"
            android:textAllCaps="true"
            style="@style/txtSolidRounded_1" tools:text="@string/lbl_106"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnView"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_26pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="@dimen/_80pxh"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_23pxh"
            android:paddingStart="@dimen/_24pxh"
            android:paddingTop="@dimen/_5pxv"
            android:singleLine="true"
            android:text="@string/lbl_view"
            android:textAllCaps="true" style="@style/btnSolid" tools:text="@string/lbl_view"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>