<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:id="@+id/linearRowcheckmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_4pxh"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumndate"
            android:layout_height="wrap_content"
            android:layout_weight="0.94" android:layout_width="0dp" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowdate"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDate"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listdateRowModel.txtDate}"
                    style="@style/txtRalewayregular14" tools:text="@string/lbl_11_08_2023"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInbox"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_80pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{listdateRowModel.txtInbox}"
                    style="@style/txtRalewayregular15" tools:text="@string/lbl_to_area"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowinboxOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInboxOne"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listdateRowModel.txtInboxOne}"
                    style="@style/txtRalewayregular12" tools:text="@string/lbl_demo"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInboxTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_121pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listdateRowModel.txtInboxTwo}"
                    style="@style/txtRalewayregular12_1" tools:text="@string/lbl_kolar"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@+id/imageCheckmark"
            android:layout_height="@dimen/_20pxh"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="@dimen/_20pxh"
            android:scaleType="fitXY"
            android:src="@drawable/green_white_checkmark_icon"
            tools:ignore="ContentDescription" tools:src="@drawable/green_white_checkmark_icon"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>