<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.AddAreaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8pxh"
        android:orientation="vertical"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <TextView
            style="@style/txtDMSansbold18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@string/lbl_city"
            tools:text="@string/lbl_city" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="@dimen/defaultDpMargin"
            app:cardCornerRadius="@dimen/_20pxh"
           >

            <LinearLayout
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/txtDMSansmedium14_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_weight="0.86"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_bangalore"
                    tools:text="@string/lbl_bangalore" />

                <ImageView
                    android:layout_width="@dimen/_14pxh"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_186pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrow12_14x14"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_arrow12_14x14" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8pxh"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="@dimen/defaultDpMargin"
            app:cardCornerRadius="@dimen/_20pxh"
            >

            <EditText
                style="@style/etSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:hint="@string/lbl_name"
                android:inputType="text"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:singleLine="true"
                android:textColorHint="@color/bluegray_100"
                tools:ignore="Autofill" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            style="@style/btnSolidRounded_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_marginBottom="@dimen/_16pxh"
            android:ellipsize="end"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_11pxv"
            android:singleLine="true"
            android:text="@string/lbl_submit"
            android:textAllCaps="true"
            tools:text="@string/lbl_submit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>